modified spacing between elements so that details show correctly in listings, still needs adjustment

--- a/assets/scss/_content-area.scss
+++ b/assets/scss/_content-area.scss
@@ -168,7 +168,6 @@
 		margin-bottom: 3vh;
 
 		.listing{
-			background: #fff;
 			border-radius: 5px;	
 			-webkit-box-shadow: 0px 9px 21px -2px rgba(224,224,224,1);
 			-moz-box-shadow: 0px 9px 21px -2px rgba(224,224,224,1);
@@ -196,6 +195,7 @@
 			&:hover{
 				.details{
 					opacity:1;
+					
 				}
 
 				.address {
@@ -210,21 +210,63 @@
 				transition: all 0.4s ease-in-out;
 			}
 
+			.col-md-3{
+				padding:0;
+				margin: 0 auto;
+				box-sizing:border-box;
+				width:auto;
+			}
+
+			.col-md-9{
+				margin: 0 auto;
+				padding:0;
+				height:15vh;
+
+				.user-details {
+					text-align:left;
+					width:100%;
+
+					.user-name {
+						font-size: 2.4vh;
+					}
+					
+				}
+				.floor-space {
+					width:100%;
+					text-align:left;
+					margin:0;
+					font-size: 2vh;
+					padding:1vh 0;
+				}
+
+				.bedrooms {
+					width:100%;
+					text-align:left;
+					margin:0;
+					font-size: 2vh;
+					padding:1vh 0 2.5vh 0;
+				}
+
+			}
+
 			.details {
-				transition: all 0.4s ease-in-out;
+				width: 22vh;
+   				 height: 26vh;
 				opacity:0;
-				padding:30px;
-				position: absolute;
-				top: 0;
-				left: 0;
-				bottom: 0;
-				right: 0;
-				-webkit-border-top-left-radius: 5px;
-				-webkit-border-top-right-radius: 5px;
-				-moz-border-radius-topleft: 5px;
-				-moz-border-radius-topright: 5px;
-				border-top-left-radius: 5px;
-				border-top-right-radius: 5px;
+				transition: all 0.4s ease-in-out;
+			
+
+			// {
+			// 	transition: all 0.4s ease-in-out;
+			// 	opacity:0;
+			// 	top: 0;
+			// 	left: 0;
+			// 	bottom: 0;
+			// 	right: 0;
+			// 	width:auto;
+			// 	height:10%;
+				
+			// 	background:red;
 				/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a500a5+0,90189b+0,d69ccf+100 */
 				background: rgba(165,0,165, .8); /* Old browsers */
 				background: -moz-linear-gradient(-45deg, rgba(165,0,165,.8) 0%, rgba(144,24,155,.8) 0%, rgba(214,156,207,.8) 100%); /* FF3.6-15 */
@@ -256,8 +298,6 @@
 				font-size: 0.9rem;
 				display: block;
 				color: rgba(255,255,255,1);
-				margin-top: 3px;
-				margin-bottom: 5px;
 			}
 
 			.post-date{
@@ -268,9 +308,7 @@
 		}
 
 		.listing-details{
-			margin-top: 20px;
-			font-size: 20px;
-			margin-right:15px;
+			width:auto;
 
 			.fas{
 				display: inline-block;
