--- a/assets/scss/_grid.scss
+++ b/assets/scss/_grid.scss
@@ -14,7 +14,6 @@
 	float: left;
 	padding: 1em;
 	width: 100%;
-	min-height: 1px;
 	display: inline-block;
 }
 
